--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.24.0
   google_fonts: 2.1.0
+  font_awesome_flutter: 10.1.0
 
 dev_dependencies:
   flutter_test:
