--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   firebase_core: ^1.24.0
   google_fonts: 2.1.0
   font_awesome_flutter: 10.1.0
+  cloud_firestore: ^3.5.1
+  firebase_auth: ^3.11.2
+  google_sign_in: ^5.4.2
+  sign_in_with_apple: ^4.1.0
+  crypto: ^3.0.2
 
 dev_dependencies:
   flutter_test:
